--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,9 @@
   -webkit-text-size-adjust: 100%;
 }
 
-#main-app {
-  height: 100dvh;
-}
+/* #main-app {
+  
+} */
 
 .container-app{
   max-width: 1280px;
@@ -36,6 +36,7 @@
   color: rgb(17 24 39 / 1);
   background-color: white;
   font-weight: 600;
+  text-align: center;
 }
 
 .title {
